Add tile vectors for all layers

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -7,7 +7,7 @@
     },
     "logging": "warning",
     "layers": {
-        "lines": {
+        "rail_lines": {
             "allowed origin": "*",
             "provider": {
                 "class": "TileStache.Goodies.VecTiles:Provider",
@@ -36,6 +36,96 @@
                         "select rl.geometry as __geometry__, rl.route_id as name, rl.owner1 as owner,  ro.reporting_mark as reporting_mark,rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail join rail_ownership ro on rl.owner1 = ro.name",
                         "select rl.geometry as __geometry__, rl.route_id as name, rl.owner1 as owner,  ro.reporting_mark as reporting_mark,rl.miles, td.name as traffic_density, rl.subdivision from rail_line rl join rail_density td on rl.traffic_density = td.detail join rail_ownership ro on rl.owner1 = ro.name"
                     ]
-        }}}
+        }}},
+        "rail_interlines": {
+            "allowed origin": "*",
+            "provider": {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs": {
+                    "clip": true,
+                    "dbinfo": {
+                        "host": "localhost",
+                        "database": "empirelogistics",
+                        "user": "el"
+                    },
+                    "queries": [
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri"
+                    ]
+        }}},
+        "rail_nodes": {
+            "allowed origin": "*",
+            "provider": {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs": {
+                    "clip": true,
+                    "dbinfo": {
+                        "host": "localhost",
+                        "database": "empirelogistics",
+                        "user": "el"
+                    },
+                    "queries": [
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node"
+                    ]
+        }}},
+        "warehouses": {
+            "allowed origin": "*",
+            "provider": {
+                "class": "TileStache.Goodies.VecTiles:Provider",
+                "kwargs": {
+                    "clip": true,
+                    "dbinfo": {
+                        "host": "localhost",
+                        "database": "empirelogistics",
+                        "user": "el"
+                    },
+                    "queries": [
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                    ]
+        }}},
     }
 }
