Fix tiles config

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -124,8 +124,8 @@
                         "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
                         "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
                         "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
-                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse",
+                        "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, date_opened from warehouse"
                     ]
-        }}},
+        }}}
     }
 }
