Distinct styles for interlines

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -49,22 +49,22 @@
                         "user": "el"
                     },
                     "queries": [
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri",
-                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ri.geometry as __geometry__ from rail_interline ri"
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri",
+                        "select ri.forwarding_node, ri.receiving_node, ri.forwarding_node_owner, ri.receiving_node_owner, ri.junction_code, ri.impedance, ST_Transform(ri.geometry, 900913) as __geometry__ from rail_interline ri"
                     ]
         }}},
         "rail_nodes": {
