Add nodes limiting query

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -79,12 +79,12 @@
                         "user": "el"
                     },
                     "queries": [
-                        "select name, incident_links, geometry as __geometry__ from rail_node",
-                        "select name, incident_links, geometry as __geometry__ from rail_node",
-                        "select name, incident_links, geometry as __geometry__ from rail_node",
-                        "select name, incident_links, geometry as __geometry__ from rail_node",
-                        "select name, incident_links, geometry as __geometry__ from rail_node",
-                        "select name, incident_links, geometry as __geometry__ from rail_node",
+                        "select name, incident_links, geometry as __geometry__ from rail_node where incident_links >= 6",
+                        "select name, incident_links, geometry as __geometry__ from rail_node where incident_links >= 5",
+                        "select name, incident_links, geometry as __geometry__ from rail_node where incident_links >= 4",
+                        "select name, incident_links, geometry as __geometry__ from rail_node where incident_links >= 3",
+                        "select name, incident_links, geometry as __geometry__ from rail_node where incident_links >= 2",
+                        "select name, incident_links, geometry as __geometry__ from rail_node where incident_links >= 1",
                         "select name, incident_links, geometry as __geometry__ from rail_node",
                         "select name, incident_links, geometry as __geometry__ from rail_node",
                         "select name, incident_links, geometry as __geometry__ from rail_node",
