Add some new layers, ports and warehouses

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -32,6 +32,23 @@
       },
       "allowed origin": "*"
     },
+    "ports": {
+      "provider": {
+        "kwargs": {
+          "queries": [
+            "select geometry as __geometry__, initcap(port_name) as name, harbor_size, initcap(shelter), cargo_pier_depth, oil_terminal_depth, max_vessel_size from port"
+          ],
+          "dbinfo": {
+            "user": "el",
+            "database": "empirelogistics",
+            "host": "localhost"
+          },
+          "clip": true
+        },
+        "class": "TileStache.Goodies.VecTiles:Provider"
+      },
+      "allowed origin": "*"
+    },
     "rail_nodes": {
       "provider": {
         "kwargs": {
