--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -4,22 +4,7 @@
       "provider": {
         "kwargs": {
           "queries": [
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse",
-            "select geometry as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) from warehouse"
+            "select ST_Transform(geometry, 900913) as __geometry__, city, state, postal_code, country, description, area, owner, extract(year from date_opened) as year_opened from warehouse"
           ],
           "dbinfo": {
             "user": "el",
