--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -21,7 +21,7 @@
       "provider": {
         "kwargs": {
           "queries": [
-            "select geometry as __geometry__, initcap(port_name) as name, harbor_size, initcap(shelter), cargo_pier_depth, oil_terminal_depth, max_vessel_size from port"
+            "select p.geometry as __geometry__, initcap(p.port_name) as name, p.harbor_size, initcap(p.shelter), p.cargo_pier_depth, p.oil_terminal_depth, p.max_vessel_size, pt.year, coalesce(to_char(pt.domestic_tonnage, 'FM999,999,999'), 'Unknown') as domestic_tonnage, coalesce(to_char(pt.foreign_tonnage, 'FM999,999,999'), 'Unknown') as foreign_tonnage, coalesce(to_char(pt.import_tonnage, 'FM999,999,999'), 'Unknown') as import_tonnage, coalesce(to_char(pt.export_tonnage, 'FM999,999,999'), 'Unknown') as export_tonnage, coalesce(to_char(pt.total_tonnage, 'FM999,999,999'), 'Unknown') as total_tonnage from port p left join port_tonnage pt on p.id = pt.port where pt.year = (select max(year) from port_tonnage)"
           ],
           "dbinfo": {
             "user": "el",
