Ikea data, new data display, load warehouse data only once

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -4,7 +4,7 @@
       "provider": {
         "kwargs": {
           "queries": [
-            "select ST_Transform(geometry, 900913) as __geometry__, coalesce(name,'Unknown') as name, city, state, postal_code, country, description, coalesce(to_char(area, 'FM999,999,999'), 'Unknown') as area, coalesce(initcap(warehouse.owner::text),'Unknown') as owner, extract(year from date_opened) as year_opened from warehouse"
+            "select ST_Transform(geometry, 900913) as __geometry__, coalesce(name,'Unknown') as name, street_address, city, state, postal_code, country, description, coalesce(to_char(area, 'FM999,999,999'), 'Unknown') as area, coalesce(initcap(warehouse.owner::text),'Unknown') as owner, extract(year from date_opened) as year_opened from warehouse"
           ],
           "dbinfo": {
             "user": "el",
