--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -15,6 +15,8 @@
         },
         "class": "TileStache.Goodies.VecTiles:Provider"
       },
+      "cache lifespan": 604800,
+      "maximum cache age": 604800,
       "allowed origin": "*"
     },
     "ports": {
@@ -32,6 +34,8 @@
         },
         "class": "TileStache.Goodies.VecTiles:Provider"
       },
+      "cache lifespan": 604800,
+      "maximum cache age": 604800,
       "allowed origin": "*"
     },
     "rail_nodes": {
@@ -64,6 +68,8 @@
         },
         "class": "TileStache.Goodies.VecTiles:Provider"
       },
+      "cache lifespan": 604800,
+      "maximum cache age": 604800,
       "allowed origin": "*"
     },
     "rail_interlines": {
@@ -96,6 +102,8 @@
         },
         "class": "TileStache.Goodies.VecTiles:Provider"
       },
+      "cache lifespan": 604800,
+      "maximum cache age": 604800,
       "allowed origin": "*"
     },
     "rail_lines": {
@@ -128,6 +136,8 @@
         },
         "class": "TileStache.Goodies.VecTiles:Provider"
       },
+      "cache lifespan": 604800,
+      "maximum cache age": 604800,
       "allowed origin": "*"
     }
   },
