Retain lat/lon for port, warehouse, rail_node; change SRID upon import for rail_node and port, et cetera

--- a/etc/empirelogistics_tiles.cfg
+++ b/etc/empirelogistics_tiles.cfg
@@ -4,7 +4,7 @@
       "provider": {
         "kwargs": {
           "queries": [
-            "select ST_Transform(w.geometry, 900913) as __geometry__, coalesce(w.name,'Unknown') as name, a.street_address, a.city, a.state, a.postal_code, a.country, w.description, coalesce(to_char(w.area, 'FM999,999,999'), 'Unknown') as area, coalesce(initcap(w.owner::text),'Unknown') as owner, extract(year from w.date_opened) as year_opened from warehouse w left outer join warehouse_address wa on w.id = wa.warehouse left outer join address a on a.id = wa.address"
+            "select w.geometry as __geometry__, coalesce(w.name,'Unknown') as name, a.street_address, a.city, a.state, a.postal_code, a.country, w.description, coalesce(to_char(w.area, 'FM999,999,999'), 'Unknown') as area, coalesce(initcap(w.owner::text),'Unknown') as owner, extract(year from w.date_opened) as year_opened from warehouse w left outer join warehouse_address wa on w.id = wa.warehouse left outer join address a on a.id = wa.address"
           ],
           "dbinfo": {
             "user": "el",
