Get libs working with uwsgi

--- a/etc/uwsgi_emperor/empirelogistics_web.ini
+++ b/etc/uwsgi_emperor/empirelogistics_web.ini
@@ -1,6 +1,7 @@
 [uwsgi]
 binary-path = /var/local/EmpireLogistics/shared/local/bin/uwsgi
 plugin = psgi
+plugins-dir = /usr/lib/uwsgi/plugins/
 processes = 8
 vacuum = true
 master = true
@@ -13,4 +14,5 @@ need-app = true
 no-site = true
 enable-threads = true
 logto = /var/local/EmpireLogistics/shared/logs/empirelogistics.log
-env = PATH=/var/local/EmpireLogistics/shared/perl/bin:/var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
+perl-local-lib = /var/local/EmpireLogistics/shared/local/
+env = PATH=/var/local/EmpireLogistics/shared/local/bin:/var/local/EmpireLogistics/shared/perl/bin:/var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
