No master, just emperorr

--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -2,7 +2,7 @@
 plugin = python
 processes = 8
 vacuum = true
-master = true
+emperor = true
 uid = el
 gid = el
 home = /var/local/EmpireLogistics/shared/python
