--- a/etc/uwsgi_emperor/empirelogistics_web.ini
+++ b/etc/uwsgi_emperor/empirelogistics_web.ini
@@ -4,7 +4,7 @@ plugin = psgi
 plugins-dir = /usr/lib/uwsgi/plugins/
 processes = 8
 vacuum = true
-master = true
+emperor = true
 uid = el
 gid = el
 home = /var/local/EmpireLogistics/shared/local
