Almost done with uwsgi

--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -1,15 +1,18 @@
 [uwsgi]
+binary-path = /var/local/EmpireLogistics/shared/local/bin/uwsgi
 plugin = python
+plugins-dir = /var/local/EmpireLogistics/shared/local/uwsgi_plugins/
 processes = 8
 vacuum = true
 emperor = true
 uid = el
 gid = el
-home = /var/local/EmpireLogistics/shared/python
+home = /var/local/EmpireLogistics/current/
+chdir = /var/local/EmpireLogistics/current/
 socket = 127.0.0.1:8889
 mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
 need-app = true
 no-site = true
 enable-threads = true
 logto = /var/local/EmpireLogistics/shared/logs/empirelogistics_tiles.log
-env = PATH=/var/local/EmpireLogistics/shared/python/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
+env = PATH=/var/local/EmpireLogistics/shared/perl/bin:/var/local/EmpireLogistics/shared/local/bin:/var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/bin:/var/local/EmpireLogistics/shared/python/bin:usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
