--- a/etc/uwsgi_emperor/empirelogistics_web.ini
+++ b/etc/uwsgi_emperor/empirelogistics_web.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 binary-path = /var/local/EmpireLogistics/shared/local/bin/uwsgi
 plugin = psgi
-plugins-dir = /usr/lib/uwsgi/plugins/
+plugins-dir = /var/local/EmpireLogistics/shared/local/uwsgi_plugins/
 processes = 8
 vacuum = true
 emperor = true
@@ -16,4 +16,4 @@ no-site = true
 enable-threads = true
 logto = /var/local/EmpireLogistics/shared/logs/empirelogistics.log
 perl-local-lib = /var/local/EmpireLogistics/shared/local/
-env = PATH=/var/local/EmpireLogistics/shared/local/bin:/var/local/EmpireLogistics/shared/perl/bin:/var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
+env = PATH=/var/local/EmpireLogistics/shared/perl/bin:/var/local/EmpireLogistics/shared/local/bin:/var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/bin:/var/local/EmpireLogistics/shared/python/bin:usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
