uwsgi config, python compilation, etc

--- a/etc/chef/site/el/files/default/etc/init/uwsgi.conf
+++ b/etc/chef/site/el/files/default/etc/init/uwsgi.conf
@@ -6,7 +6,7 @@ stop on runlevel [06]
 
 respawn
 
-env = PATH=/var/local/EmpireLogistics/shared/perl/bin:/var/local/EmpireLogistics/shared/local/bin:/var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/bin:/var/local/EmpireLogistics/shared/python/bin:usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
+env PATH=/var/local/EmpireLogistics/shared/perl/bin:/var/local/EmpireLogistics/shared/local/bin:/var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/bin:/var/local/EmpireLogistics/shared/python/bin:usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
 env LOGTO=/var/log/EmpireLogistics/shared/logs/uwsgi-emperor.log
 
 exec uwsgi --master --die-on-term --emperor /var/local/EmpireLogistics/current/etc/uwsgi_emperor --logto $LOGTO
