--- a/etc/chef/site/el/files/default/uwsgi_latest/buildconf/el.ini
+++ b/etc/chef/site/el/files/default/uwsgi_latest/buildconf/el.ini
@@ -1,4 +1,6 @@
 [uwsgi]
 main_plugin = psgi
 embedded_plugins = psgi,python
-inherit = base 
+inherit = base
+plugin_dir = /var/local/EmpireLogistics/shared/local/uwsgi_plugins/
+
