Finally system config, uwsgi, python, etc, done

--- a/etc/uwsgi_emperor/empirelogistics_web.ini
+++ b/etc/uwsgi_emperor/empirelogistics_web.ini
@@ -7,7 +7,7 @@ vacuum = true
 emperor = true
 uid = el
 gid = el
-home = /var/local/EmpireLogistics/current/
+home = /var/local/EmpireLogistics/shared/perl/perls/perl-5.18.2/
 chdir = /var/local/EmpireLogistics/current/
 socket = 127.0.0.1:8888
 psgi = /var/local/EmpireLogistics/current/empirelogistics_web.psgi
