cors header on tiles

--- a/etc/uwsgi_emperor/empirelogistics_tiles.ini
+++ b/etc/uwsgi_emperor/empirelogistics_tiles.ini
@@ -10,6 +10,9 @@ gid = el
 home = /var/local/EmpireLogistics/shared/python
 chdir = /var/local/EmpireLogistics/current/
 socket = 127.0.0.1:8889
+http-socket = 0.0.0.0:9999
+add-header = Access-Control-Allow-Origin: *
+add-header = "Connection: Keep-Alive"
 mount = /=/var/local/EmpireLogistics/current/empirelogistics_tiles.py
 need-app = true
 no-site = true
