--- a/etc/chef/site/el/files/default/nginx.conf
+++ b/etc/chef/site/el/files/default/nginx.conf
@@ -21,6 +21,11 @@ server {
         uwsgi_pass 127.0.0.1:8889;
     }
     location / {
+        uwsgi_param Host $http_host;
+        uwsgi_param X-Forwarded-Host $http_host;
+        uwsgi_param X-Real-IP $remote_addr;
+        uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
+        uwsgi_param X-Forwarded-Proto $http_x_forwarded_proto;
         include uwsgi_params;
         uwsgi_pass 127.0.0.1:8888;
         uwsgi_modifier1 5;
