--- a/etc/chef/site/el/files/default/nginx.conf
+++ b/etc/chef/site/el/files/default/nginx.conf
@@ -13,6 +13,12 @@ server {
         add_header X-Static super;
         try_files /$tile_path @tiles;
     }
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|favicon)$ {
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+    }
+
 
     location @tiles {
         rewrite ^/tiles/(.*) $1 break;
