--- a/etc/chef/cookbooks/user/Rakefile
+++ b/etc/chef/cookbooks/user/Rakefile
@@ -1,33 +1,21 @@
 #!/usr/bin/env rake
 require 'rake/testtask'
+require 'foodcritic'
 
 Rake::TestTask.new do |t|
-  t.libs.push "lib"
-  t.test_files = FileList['test/**/*_spec.rb']
+  t.test_files = FileList['test/unit/**/*_spec.rb']
   t.verbose = true
 end
 
-desc "Runs foodcritc linter"
-task :foodcritic do
-  if Gem::Version.new("1.9.2") <= Gem::Version.new(RUBY_VERSION.dup)
-    sandbox = File.join(File.dirname(__FILE__), %w{tmp foodcritic cookbook})
-    prepare_foodcritic_sandbox(sandbox)
-
-    sh "foodcritic --epic-fail any #{File.dirname(sandbox)}"
-  else
-    puts "WARN: foodcritic run is skipped as Ruby #{RUBY_VERSION} is < 1.9.2."
-  end
+FoodCritic::Rake::LintTask.new do |t|
+  t.options = { :fail_tags => ['any'] }
 end
 
-task :default => 'test'
-
-private
-
-def prepare_foodcritic_sandbox(sandbox)
-  files = %w{*.md *.rb attributes definitions files providers
-    recipes resources templates}
-
-  rm_rf sandbox
-  mkdir_p sandbox
-  cp_r Dir.glob("{#{files.join(',')}}"), sandbox
+begin
+  require 'kitchen/rake_tasks'
+  Kitchen::RakeTasks.new
+rescue LoadError
+  puts ">>>>> Kitchen gem not loaded, omitting tasks" unless ENV['CI']
 end
+
+task :default => [:foodcritic, :test]
